--- a/src/Styling/NewLandingPage.scss
+++ b/src/Styling/NewLandingPage.scss
@@ -62,9 +62,10 @@
     flex-direction: row;
     background: linear-gradient(180deg, rgb(32, 63, 140) 0%, #06b6d4 100%);
     height: 75vh;
+    padding-top: 150px;
     .hero-logo {
       width: 100%;
-      max-width: 40rem;
+      max-width: 55rem;
       height: auto;
       border-radius: 40%;
       padding: 5rem;
@@ -153,10 +154,9 @@
     font-size: 2.5rem;
   }
   .how-it-works-section {
-    padding-top: 12em;
+    padding-top: 20em;
     background: linear-gradient(0deg, rgb(32, 63, 140) 0%, #06b6d4 70%);
     width: 100%;
-    // max-width: 1200px;
   }
   .grid-layout-marketing {
     margin: 2em;
@@ -164,7 +164,8 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
     padding: 2rem !important;
-    background: #ffffff96 !important;
+    background: #ffffff5d !important;
+    border-radius: 40px;
 
     @media (max-width: 1024px) {
       grid-template-columns: repeat(2, 1fr);
@@ -232,29 +233,99 @@
     }
   }
   .step-title {
-  color: rgb(32, 61, 160) !important;
-  font-size: 1.5rem !important;
-  font-weight: bold !important;
-  margin: 1rem 0 !important;
+    color: rgb(32, 61, 160) !important;
+    font-size: 1.5rem !important;
+    font-weight: bold !important;
+    margin: 1rem 0 !important;
 
-  @media (max-width: 768px) {
-    font-size: 1.3rem !important;
+    @media (max-width: 768px) {
+      font-size: 1.3rem !important;
+    }
   }
-}
 
-.step-description {
-  width: 100%;
-  margin-top: 1rem !important;
-  padding: 1rem !important;
-  background-color: rgba(255, 255, 255, 0.7) !important;
-  
-  p {
-      font-family: 'abril fatface', sans-serif !important;
+  .step-description {
+    width: 100%;
+    margin-top: 1rem !important;
+    padding: 1rem !important;
+    background-color: rgba(255, 255, 255, 0.7) !important;
+
+    p {
+      font-family: "abril fatface", sans-serif !important;
       margin: 0;
-    font-size: 1rem;
-    line-height: 1.4;
-    letter-spacing: 1px;
+      font-size: 1rem;
+      line-height: 1.4;
+      letter-spacing: 1px;
+    }
+  }
+  .cta_login_title {
+    font-family: "Abril Fatface", sans-serif !important;
+    margin: 0 !important;
+    padding:3em;
+    background-color: rgb(31, 64, 140);
+    box-shadow: none !important;
+    color: rgb(62, 211, 222, 0.8) !important;
+    text-align: center;
+    font-size: 3rem;
   }
 
-}
+  .cta_login_container {
+    background: linear-gradient(
+      180deg,
+      rgb(32, 63, 140) 10%,
+      #06b6d4 51%,
+      rgb(29, 58, 138) 90%
+    );
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    border-left: 5px solid rgb(0, 0, 0);
+    gap: 5em;
+    padding-bottom: 15em;
+    padding-right: 5em;
+
+    .video_next_login {
+      box-shadow: 10px 0 30px rgba(255, 255, 255, 0.478);
+      width: 80%;
+      border-radius: 20px;
+    }
+
+    .logo_pic {
+      width: 100%;
+      height: 30vh;
+      object-fit: cover;
+      border-radius: 0 !important;
+      margin-bottom: 1rem;
+    }
+    .cta_login {
+      background-color: rgba(255, 255, 255, 0.649);
+      display: grid;
+      border-radius: 40px;
+      box-shadow: 0px 0px 55px rgba(255, 255, 255, 0.395);
+      width: 80vw;
+      height: 72vh;
+      margin: 0;
+      justify-content: center;
+      place-items: center;
+
+      .signin-button {
+        width: 70%;
+      }
+
+      .cta_login_input {
+        width: 20em;
+        padding: 0 10px;
+      }
+
+      .signin-form {
+        border-radius: 20em;
+      }
+    }
+    .cta_reset_links {
+      display: flex;
+      gap: 1rem;
+      margin-bottom: 5em;
+    }
+  }
 }
